tests/idris2/interface/interface034/expected
1/1: Building Main (Main.idr)
Error: Expected list of determining parameters.

Main:1:17--1:18
 1 | interface Iface | where
                     ^

